--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,4 +1,31 @@
 .header {
+  // Hamburger Open Styles
+  &.open {
+    .header__menu {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
+
+      > span:nth-child(2) {
+        opacity: 0;
+      }
+
+      > span:last-child {
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  .overlay {
+    opacity: 0;
+    position: fixed;
+    top: 3.875rem;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background-image: linear-gradient($darkBlue, transparent);
+  }
+
   nav {
     padding: 1.125rem 1.5rem;
   }
@@ -23,20 +50,6 @@
 
       &:not(:last-child) {
         margin-bottom: 6px;
-      }
-    }
-
-    &.open {
-      > span:first-child {
-        transform: rotate(45deg);
-      }
-
-      > span:nth-child(2) {
-        opacity: 0;
-      }
-
-      > span:last-child {
-        transform: rotate(-45deg);
       }
     }
   }
