--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -17,12 +17,22 @@ body {
   line-height: 1.3;
   font-weight: 300;
   color: $grayishBlue;
+
+  &.noscroll {
+    overflow: hidden;
+  }
 }
 
 a,
 a:visited,
 a:hover {
   text-decoration: none;
+}
+
+//spacing
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 //Flexbox
