--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,7 +1,7 @@
 .header {
   // Hamburger Open Styles
   &.open {
-    .header__menu {
+    .header__toggle {
       > span:first-child {
         transform: rotate(45deg);
       }
@@ -19,7 +19,7 @@
   .overlay {
     opacity: 0;
     position: fixed;
-    top: 3.875rem;
+    top: 0px;
     right: 0px;
     bottom: 0px;
     left: 0px;
@@ -27,7 +27,10 @@
   }
 
   nav {
-    padding: 1.125rem 1.5rem;
+    position: relative;
+    background-color: $white;
+    padding-top: 1.125rem;
+    padding-bottom: 1.125rem;
   }
 
   &__logo {
@@ -37,7 +40,7 @@
     }
   }
 
-  &__menu {
+  &__toggle {
     //Mobile Menu
 
     > span {
@@ -51,6 +54,24 @@
       &:not(:last-child) {
         margin-bottom: 6px;
       }
+    }
+  }
+
+  &__menu {
+    background: $white;
+    padding: 1.625rem;
+    border-radius: 5px;
+    position: absolute;
+    width: calc(100% - 3rem);
+    left: 50%;
+    margin-top: 1.5rem;
+    transform: translateX(-50%);
+
+    a {
+      display: block;
+      text-align: center;
+      color: $darkBlue;
+      padding: 0.625rem;
     }
   }
 
