--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,7 +13,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Public Sans", sans-serif;
-  font-size: $font-med;
+  font-size: $font-sm;
   line-height: 1.3;
   font-weight: 300;
   color: $grayishBlue;
@@ -21,6 +21,12 @@ body {
   &.noscroll {
     overflow: hidden;
   }
+}
+
+h1,
+h2,
+h3 {
+  margin-top: 0px;
 }
 
 a,
@@ -31,8 +37,10 @@ a:hover {
 
 //spacing
 .container {
-  padding-left: 1.5rem;
+  padding-top: 2.25rem;
   padding-right: 1.5rem;
+  padding-bottom: 2.25rem;
+  padding-left: 1.5rem;
 }
 
 //Flexbox
@@ -64,6 +72,14 @@ button,
   color: $white;
   cursor: pointer;
   font-weight: 700;
+  display: inline-block; // makes button follow correct css rules instead of being inline
+  font-size: $font-sm;
+  color: $white;
+  transition: opacity 300ms ease-in-out;
+
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
 //Visibility
