--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -10,3 +10,5 @@ $white: hsl(0, 0%, 100%);
 //font sizes
 $font-med: 1.125rem; //18px
 $font-sm: 0.875rem; //14px
+$font-lg: 1.25rem;
+$font-xlg: 3.25rem;
