--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -17,6 +17,7 @@
   }
 
   .overlay {
+    z-index: 1;
     opacity: 0;
     position: fixed;
     top: 0px;
@@ -27,6 +28,7 @@
   }
 
   nav {
+    z-index: 1;
     position: relative;
     background-color: $white;
     padding-top: 1.125rem;
@@ -58,6 +60,7 @@
   }
 
   &__menu {
+    z-index: 2;
     background: $white;
     padding: 1.625rem;
     border-radius: 5px;
